Fix alignment of menu-logo

--- a/src/glados/static/scss/chembl-style.scss
+++ b/src/glados/static/scss/chembl-style.scss
@@ -185,8 +185,8 @@ $hexagon-lateral-distance-proportion: 0.0669872981;
 .z-depth-below-zero {
   z-index: -1;
   box-shadow: none;
-  li:first-child {
-    margin-top: $chembl-header-height !important;
+  .menu-logo{
+    visibility: hidden;
   }
 }
 .side-nav {
@@ -323,6 +323,7 @@ header .row {
 
 .side-nav-width{
   width: $side-nav-width !important;
+  margin-left: -10px;
 }
 
 #chembl-header-sidenav-pushpin-container {
